# Friday

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  friday.py  hello_world.py  pyproject.toml  re_check_with_ruff_linter.sh  ruff_hook.sh  setup.sh
