[tool.poetry]
name = "friday"
version = "0.1.0"
description = "Mega Testing Project"
authors = ["Aliaksei Shybeka <aliaksei_shybeka@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
